--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="icon" type="image/x-icon" href="../img/RTU Logo.png">
+    <link rel="icon" type="image/x-icon" href="../frontend/img/RTU Logo.png">
 
 <body>
     <header>
         <div class="logo-container">
-            <img src="../img/RTU Logo.png" class="logo1">
-            <img src="../img/IFLDE Logo.png" class="logo2">
+            <img src="../frontend/img/RTU Logo.png" class="logo1">
+            <img src="../frontend/img/IFLDE Logo.png" class="logo2">
             <div class="logo-text-container">
                 <h2 class="logo-text">Rizal Technological University</h2>
                 <p class="logo-subtext">Institute of Flexible Learning & Digital Education</p>
@@ -23,10 +23,10 @@
         <nav class="nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="../About/about.html">About Us</a></li>
-                <li><a href="../Downloads/downloads.html">Downloads</a></li>
-                <li><a href="../News/news.html">News</a></li>
-                <button class="btnLogin-popup" onclick="window.location.href='../Login/login.html';">Login</button>
+                <li><a href="../frontend/About/about.html">About Us</a></li>
+                <li><a href="../frontend/Downloads/downloads.html">Downloads</a></li>
+                <li><a href="../frontend/News/news.html">News</a></li>
+                <button class="btnLogin-popup" onclick="window.location.href='../frontend/Login/login.html';">Login</button>
             </ul>
         </nav>
     </header>
@@ -35,7 +35,7 @@
         <div class="sec-01">
             <div class="container">
                 <div class="logo-title">
-                    <img src="../../img/RTU Logo.png" alt="RTU Logo" class="rtu-logo">
+                    <img src="../../frontend/img/RTU Logo.png" alt="RTU Logo" class="rtu-logo">
                     <h2 class="title">Rizal Technological University</h2>
                 </div>
                     <h1 class="main-title">Expanded Tertiary Education Equivalency <br> and Accreditation Program</h1>
@@ -44,7 +44,7 @@
                     <p class="subtext">Rizal Technological University (RTU) offers the Expanded
                     Tertiary Education Equivalency and Accreditation Program (ETEEAP).
                     Take the next step in your education journey with ETEEAP at RTU! Apply now online!</p>
-                    <button class="apply-now-btn" onclick="window.location.href='../Login/login.html';">Apply Now</button>
+                    <button class="apply-now-btn" onclick="window.location.href='../frontend/Login/login.html';">Apply Now</button>
                 </div>
             </div>
         </div>   
@@ -52,7 +52,7 @@
         <div class="sec-02">
             <div class="container">
                 <div class="logo">
-                    <img src="../../img/ETEEAP Logo.png" alt="ETEEAP Logo" class="eteeap-logo">
+                    <img src="../../frontend/img/ETEEAP Logo.png" alt="ETEEAP Logo" class="eteeap-logo">
                 </div>
                 <div class="content">
                     <h2>What is ETEEAP?</h2>
@@ -74,7 +74,7 @@
             <div class="container">
                 <div class="card">
                     <div class="imgBx">
-                        <img src="../img/ICS Logo.png" class="ics-logo">
+                        <img src="../frontend/img/ICS Logo.png" class="ics-logo">
                     </div>
                     <div class="content">
                         <h2>Institute of Computer Studies</h2>
@@ -83,7 +83,7 @@
                 </div>
                 <div class="card">
                     <div class="imgBx">
-                        <img src="../img/CBEA.png" class="cbea-logo">
+                        <img src="../frontend/img/CBEA.png" class="cbea-logo">
                     </div>
                     <div class="content">
                         <h2>College of Business, Entrepreneurship and Accountancy</h2>
@@ -97,7 +97,7 @@
                 </div>
                 <div class="card">
                     <div class="imgBx">
-                        <img src="../img/CAS.png" class="cas-logo">
+                        <img src="../frontend/img/CAS.png" class="cas-logo">
                     </div>
                     <div class="content">
                         <h2>College of Arts and Sciences</h2>
@@ -192,7 +192,7 @@
         <div class="container">
             <div class="row">
                 <div class="footer-col logo-left">
-                    <img src="../img/Bagong Pilipinas Logo.png" alt="Left Logo">
+                    <img src="../frontend/img/Bagong Pilipinas Logo.png" alt="Left Logo">
                 </div>
                 <div class="footer-col">
                     <h4>Contact Us</h4>
@@ -225,7 +225,7 @@
                     </div>
                 </div>
                 <div class="footer-col logo-right">
-                    <img src="../img/Republika ng Pilipinas.png" alt="Right Logo">
+                    <img src="../frontend/img/Republika ng Pilipinas.png" alt="Right Logo">
                 </div>
             </div>
         </div>
