--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="icon" type="image/x-icon" href="../frontend/img/RTU Logo.png">
+    <link rel="icon" type="image/x-icon" href="../frontend/client/img/RTU Logo.png">
 
 <body>
     <header>
         <div class="logo-container">
-            <img src="../frontend/img/RTU Logo.png" class="logo1">
-            <img src="../frontend/img/IFLDE Logo.png" class="logo2">
+            <img src="../frontend/client/img/RTU Logo.png" class="logo1">
+            <img src="../frontend/client/img/IFLDE Logo.png" class="logo2">
             <div class="logo-text-container">
                 <h2 class="logo-text">Rizal Technological University</h2>
                 <p class="logo-subtext">Institute of Flexible Learning & Digital Education</p>
@@ -35,7 +35,7 @@
         <div class="sec-01">
             <div class="container">
                 <div class="logo-title">
-                    <img src="../../frontend/img/RTU Logo.png" alt="RTU Logo" class="rtu-logo">
+                    <img src="../../frontend/client/img/RTU Logo.png" alt="RTU Logo" class="rtu-logo">
                     <h2 class="title">Rizal Technological University</h2>
                 </div>
                     <h1 class="main-title">Expanded Tertiary Education Equivalency <br> and Accreditation Program</h1>
