--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
                     <h4>Quick Links</h4>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="../About/about.html">About Us</a></li>
-                        <li><a href="../Downloads/downloads.html">Downloads</a></li>
-                        <li><a href=".. /News/news.html">News</a></li>
+                        <li><a href="..frontend/client/applicant/about/about.html">About Us</a></li>
+                        <li><a href="..frontend/client/applicant/downloads/downloads.html">Downloads</a></li>
+                        <li><a href="..frontend/client/applicant/news/news.html">News</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
