--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="../../frontend/client/img/RTU Logo.png" class="logo1">
+            <img src="../frontend/client/img/RTU Logo.png" class="logo1">
             <img src="../frontend/client/img/IFLDE Logo.png" class="logo2">
             <div class="logo-text-container">
                 <h2 class="logo-text">Rizal Technological University</h2>
@@ -36,7 +36,7 @@
         <div class="sec-01">
             <div class="container">
                 <div class="logo-title">
-                    <img src="../img/RTU Logo.png" alt="RTU Logo" class="rtu-logo">
+                    <img src="../frontend/client/img/RTU Logo.png" alt="RTU Logo" class="rtu-logo">
                     <h2 class="title">Rizal Technological University</h2>
                 </div>
                     <h1 class="main-title">Expanded Tertiary Education Equivalency <br> and Accreditation Program</h1>
