--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <p class="subtext">Rizal Technological University (RTU) offers the Expanded
                     Tertiary Education Equivalency and Accreditation Program (ETEEAP).
                     Take the next step in your education journey with ETEEAP at RTU! Apply now online!</p>
-                    <button class="apply-now-btn" onclick="window.location.href='../Login/login.html';">Apply Now</button>
+                    <button class="apply-now-btn" onclick="window.location.href='frontend/client/applicant/login/login.html';">Apply Now</button>
                 </div>
             </div>
         </div>   
@@ -53,7 +53,7 @@
         <div class="sec-02">
             <div class="container">
                 <div class="logo">
-                    <img src="../../img/ETEEAP Logo.png" alt="ETEEAP Logo" class="eteeap-logo">
+                    <img src="../frontend/client/img/ETEEAP Logo.png" alt="ETEEAP Logo" class="eteeap-logo">
                 </div>
                 <div class="content">
                     <h2>What is ETEEAP?</h2>
@@ -75,7 +75,7 @@
             <div class="container">
                 <div class="card">
                     <div class="imgBx">
-                        <img src="../img/ICS Logo.png" class="ics-logo">
+                        <img src="../frontend/client/img/ICS Logo.png" class="ics-logo">
                     </div>
                     <div class="content">
                         <h2>Institute of Computer Studies</h2>
@@ -84,7 +84,7 @@
                 </div>
                 <div class="card">
                     <div class="imgBx">
-                        <img src="../img/CBEA.png" class="cbea-logo">
+                        <img src="../frontend/client/img/CBEA.png" class="cbea-logo">
                     </div>
                     <div class="content">
                         <h2>College of Business, Entrepreneurship and Accountancy</h2>
@@ -98,7 +98,7 @@
                 </div>
                 <div class="card">
                     <div class="imgBx">
-                        <img src="../img/CAS.png" class="cas-logo">
+                        <img src="../frontend/client/img/CAS.png" class="cas-logo">
                     </div>
                     <div class="content">
                         <h2>College of Arts and Sciences</h2>
@@ -193,7 +193,7 @@
         <div class="container">
             <div class="row">
                 <div class="footer-col logo-left">
-                    <img src="../img/Bagong Pilipinas Logo.png" alt="Left Logo">
+                    <img src="../frontend/client/img/Bagong Pilipinas Logo.png" alt="Left Logo">
                 </div>
                 <div class="footer-col">
                     <h4>Contact Us</h4>
@@ -214,9 +214,9 @@
                     <h4>Quick Links</h4>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="..frontend/client/applicant/about/about.html">About Us</a></li>
-                        <li><a href="..frontend/client/applicant/downloads/downloads.html">Downloads</a></li>
-                        <li><a href="..frontend/client/applicant/news/news.html">News</a></li>
+                        <li><a href="../frontend/client/applicant/about/about.html">About Us</a></li>
+                        <li><a href="../frontend/client/applicant/downloads/downloads.html">Downloads</a></li>
+                        <li><a href="../frontend/client/applicant/news/news.html">News</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
@@ -226,7 +226,7 @@
                     </div>
                 </div>
                 <div class="footer-col logo-right">
-                    <img src="../img/Republika ng Pilipinas.png" alt="Right Logo">
+                    <img src="../frontend/client/img/Republika ng Pilipinas.png" alt="Right Logo">
                 </div>
             </div>
         </div>
