--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>ETEEAP Tracking System</title>
     <link rel="stylesheet" href="index.css">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script src="./index.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="../frontend/client/img/RTU Logo.png">
