--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="../frontend/client/img/RTU Logo.png">
+</head>
 
 <body>
     <header>
@@ -21,15 +22,14 @@
             </div>
         </div>
         <nav class="nav">
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="frontend/client/applicant/about/about.html">About Us</a></li>
-        <li><a href="frontend/client/applicant/downloads/downloads.html">Downloads</a></li>
-        <li><a href="frontend/client/applicant/news/news.html">News</a></li>
-        <button class="btnLogin-popup" onclick="window.location.href='frontend/client/applicant/login/login.html';">Login</button>
-    </ul>
-</nav>
-
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="frontend/client/applicant/about/about.html">About Us</a></li>
+                <li><a href="frontend/client/applicant/downloads/downloads.html">Downloads</a></li>
+                <li><a href="frontend/client/applicant/news/news.html">News</a></li>
+                <button class="btnLogin-popup" onclick="window.location.href='frontend/client/applicant/login/login.html';">Login</button>
+            </ul>
+        </nav>
     </header>
     
     <section id="home">
@@ -189,7 +189,7 @@
         </div>
     </section>
 
-    <footer class="footer">
+      <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="footer-col logo-left">
@@ -197,18 +197,11 @@
                 </div>
                 <div class="footer-col">
                     <h4>Contact Us</h4>
-                    <div>
-                        <i class="fa-solid fa-location-dot"></i>
+                    <div><i class="fa-solid fa-location-dot"></i>
                         <p>Room 5021, Main Academic Building, RTU Main Campus, Boni Ave., Mandaluyong.</p>
                     </div>
-                    <div>
-                        <i class="fa fa-phone"></i>
-                        <p>(02) 8534-8267 local 1240</p>
-                    </div>
-                    <div>
-                        <i class="fa fa-envelope"></i>
-                        <p>iflde@rtu.edu.ph</p>
-                    </div>
+                    <div><i class="fa fa-phone"></i><p>(02) 8534-8267 local 1240</p></div>
+                    <div><i class="fa fa-envelope"></i><p>iflde@rtu.edu.ph</p></div>
                 </div>
                 <div class="footer-col">
                     <h4>Quick Links</h4>
@@ -233,10 +226,10 @@
         <div class="copyrightText">
             <p>Copyright © 2024. All Rights Reserved</p>
         </div>
-    </footer>    
+    </footer>     
 
     <!-- Home Page Animation -->
-    <script src="https://unpkg.com/scrollreveal"></script>
+ <script src="https://unpkg.com/scrollreveal"></script>
     <script>
         // Scroll to the top on page refresh
         window.addEventListener("beforeunload", () => {
@@ -251,26 +244,36 @@
             delay: 400
         });
 
-        // Define elements with their respective animation origins
         const revealElements = [
-            { 
-                selector: '.main-title, .rtu-logo, .sec-01 .title, .sec-01 .text, .sec-01 .subtext, .apply-now-btn, .eteeap-logo, .sec-02 .content .eteeap-logo, .sec-03 .title, .sec-03 .subtitle, .sec-04 h2, .sec-05 .content', 
-                options: { origin: 'bottom', delay: 50 }
-            },
-            { 
-                selector: '.sec-01 .text, .sec-01 .subtext, .apply-now-btn', 
-                options: { origin: 'left', delay: 50 }
-            },
-            { 
-                selector: '.sec-02 .content', 
-                options: { origin: 'right', delay: 50 }
-            }
+            { selector: '.main-title, .rtu-logo, .sec-01 .title, .sec-01 .text, .sec-01 .subtext, .apply-now-btn, .eteeap-logo, .sec-02 .content .eteeap-logo, .sec-03 .title, .sec-03 .subtitle, .sec-04 h2, .sec-05 .content', options: { origin: 'bottom', delay: 50 } },
+            { selector: '.sec-01 .text, .sec-01 .subtext, .apply-now-btn', options: { origin: 'left', delay: 50 } },
+            { selector: '.sec-02 .content', options: { origin: 'right', delay: 50 } }
         ];
         
-        // Apply ScrollReveal to all elements
         revealElements.forEach(({ selector, options }) => {
             sr.reveal(selector, options);
         });
+    </script>
+
+    <!-- ✅ Add your backend API call here -->
+    <script>
+        async function callBackend() {
+            try {
+                const response = await fetch("https://eteeapbackend-production.up.railway.app/api/test", {
+                    method: "GET",
+                    headers: {
+                        "Content-Type": "application/json"
+                    }
+                });
+                const result = await response.json();
+                console.log("Backend response:", result);
+            } catch (err) {
+                console.error("Error connecting to backend:", err);
+            }
+        }
+
+        // Call backend when page loads
+        window.onload = callBackend;
     </script>
 
 </body>
