--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         </div>
         <nav class="nav">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="frontend/client/applicant/about/about.html">About Us</a></li>
-                <li><a href="frontend/client/applicant/downloads/downloads.html">Downloads</a></li>
-                <li><a href="frontend/client/applicant/news/news.html">News</a></li>
-                <button class="btnLogin-popup" onclick="window.location.href='frontend/client/applicant/login/login.html';">Login</button>
+              <li><a href="/applicant/about/about.html">About Us</a></li>
+             <li><a href="/applicant/downloads/downloads.html">Downloads</a></li>
+             <li><a href="/applicant/news/news.html">News</a></li>
+            <button class="btnLogin-popup" onclick="window.location.href='/applicant/login/login.html';">Login</button>
+
             </ul>
         </nav>
     </header>
