--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                 <p class="logo-subtext">Institute of Flexible Learning & Digital Education</p>
             </div>
         </div>
-        <nav class="nav">
+               <nav class="nav">
             <ul>
-              <li><a href="/applicant/about/about.html">About Us</a></li>
-             <li><a href="/applicant/downloads/downloads.html">Downloads</a></li>
-             <li><a href="/applicant/news/news.html">News</a></li>
-            <button class="btnLogin-popup" onclick="window.location.href='/applicant/login/login.html';">Login</button>
-
+                <li><a href="index.html">Home</a></li>
+                <li><a href="frontend/client/applicant/about/about.html">About Us</a></li>
+                <li><a href="frontend/client/applicant/downloads/downloads.html">Downloads</a></li>
+                <li><a href="frontend/client/applicant/news/news.html">News</a></li>
+                <button class="btnLogin-popup" onclick="window.location.href='frontend/client/applicant/login/login.html';">Login</button>
             </ul>
         </nav>
     </header>
