--- a/frontend/client/applicant/login/login.html
+++ b/frontend/client/applicant/login/login.html
@@ -87,7 +87,7 @@
                     </span>
                 </div>
                 <div class="input-box">
-                    <input type="password" id="confirmPassword" required>
+                 <input type="password" id="regConfirmPassword" required>
                     <label>Confirm Password</label>
                     <span class="toggle-password">
                         <ion-icon name="eye-off"></ion-icon>
