--- a/frontend/client/applicant/login/login.html
+++ b/frontend/client/applicant/login/login.html
@@ -65,7 +65,7 @@
                     </button>
                 </div>
                 <div class="login-register">
-                    <p>HEYYY <a href="#" class="register-link">Register</a></p>
+                    <p>Don't have an account? <a href="#" class="register-link">Register</a></p>
                 </div>
             </form>
         </div>
