--- a/frontend/client/applicant/login/login.html
+++ b/frontend/client/applicant/login/login.html
@@ -24,7 +24,7 @@
         </div>
         <nav class="nav">
             <ul>
-               <li><a href="../../../../index.html">Homeee</a></li>
+               <li><a href="../../../../index.html">Home</a></li>
                 <li><a href="../about/about.html">About Us</a></li>
                 <li><a href="../downloads/downloads.html">Downloads</a></li>
                 <li><a href="../news/news.html">News</a></li>
